--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,23 @@
 Style/ClassAndModuleChildren:
   Enabled: false
+
+Style/DateTime:
+  Enabled: false
+
+Metrics/LineLength:
+  Max: 120
+
+Metrics/BlockLength:
+  Max: 50
+
+Metrics/AbcSize:
+  Max: 100
+
+Metrics/CyclomaticComplexity:
+  Max: 15
+
+Metrics/PerceivedComplexity:
+  Max: 15
+
+Metrics/MethodLength:
+  Max: 50
