Make qdm ids (#12)
* generate qdm ids when converting from hds

* make the qdm ids

* modify function from latest cqm-model changes

* point to master of cql_qdm_patientapi

* Added to maintain id test to check the data element ids are converted properly

* excluded all spec files from rubocop max block length

* Handle relatedTo with new embedded relationship

* use indexOf instead of includes for Array in javascript block

* added monkey patch for BSON::ObjectId that is in bonnie. Cleaned up unneeded code as a result

* remove pry-byebug from Gemfile

* add comment explaining ignored ids in tests

* update cqm-models gemfile branch

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,8 @@ Metrics/LineLength:
 
 Metrics/BlockLength:
   Max: 50
+  Exclude:
+    - 'spec/**/*_spec.rb'
 
 Metrics/AbcSize:
   Max: 130
@@ -39,3 +41,7 @@ Metrics/MethodLength:
 
 Style/IfUnlessModifier:
   Enabled: false
+
+Lint/UnusedMethodArgument:
+  Exclude:
+    - 'lib/ext/mongoid.rb'
