--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,9 @@
 AllCops:
   TargetRubyVersion: 2.3
 
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
+
 Style/ClassAndModuleChildren:
   Enabled: false
 
