--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ rvm:
   - 2.3.8
 services:
   - mongodb
-before_install: gem install bundler
+before_install:
+  - gem update --system
+  - gem install bundler
 script:
   - bundle exec rake
   - bundle exec rubocop
