--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ language: ruby
 rvm:
   - 2.4.1
   - 2.3.8
-before_install: gem install bundler
+services:
+  - mongodb
+before_install: gem install bundler -v "< 2.0"
+
 script:
   - bundle exec rake
   - bundle exec rubocop
