bonnie_bundle to CQM Measure model conversion (#21)
* Bonnie to CQM measure converter

* Added rake task to convert measures

* Refactored to_qdm function

* Change rake task cqm:hds:to_qdm to cqm:hds:to_cqm

* Updating README

* Set up simplecov and codecov for cqm-converter

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,9 +24,6 @@ Metrics/CyclomaticComplexity:
 Metrics/PerceivedComplexity:
   Max: 30
 
-Metrics/MethodLength:
-  Max: 50
-
 Style/WordArray:
   Enabled: false
 
@@ -36,8 +33,11 @@ Style/FrozenStringLiteralComment:
 Metrics/ClassLength:
   Max: 250
 
+Metrics/ModuleLength:
+  Max: 150
+
 Metrics/MethodLength:
-  Max: 60
+  Max: 101
 
 Style/IfUnlessModifier:
   Enabled: false
