--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ rvm:
   - 2.3.8
 services:
   - mongodb
-before_install: gem install bundler -v "< 2.0"
-
+before_install:
+  - gem install bundler -v "< 2.0"
 script:
   - bundle exec rake
   - bundle exec rubocop
